--- a/DESD_BRFN/static/base.css
+++ b/DESD_BRFN/static/base.css
@@ -6,7 +6,6 @@ body {
 }
 
 nav {
-    background-color: #1a3c1a;
     padding: 0;
 }
 
